tests/fixtures/invalid/pow_dict_bytes.py
# Cannot call pow() with Dict[str, int], Bytes
x = pow({"a": 1}, b"hello")
